--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/react-dom": "^18.0.6",
         "@vitejs/plugin-react": "^2.0.0",
         "babel-jest": "^28.1.3",
+        "babel-preset-vite": "^1.1.3",
         "eslint": "^8.20.0",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0",
